Added solver (WiP)